--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body, html, li, ul, nav, div, header, img, input, span, h1, h2, h3, h4, h5, p {
     margin: 0;
     padding: 0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  }
 
 body::-webkit-scrollbar {
