--- a/src/components/Navbars/Navbar.css
+++ b/src/components/Navbars/Navbar.css
@@ -13,10 +13,18 @@
     padding: 2px 6px;
 }
 .profile-icon {
-    padding: 2px 8px;
+    margin: 2px 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    min-width: 40px;
+    height: 40px;
+    background-color:  rgb(80, 80, 80);
+    border-radius: 50%;
 }
 .iconLogInButton {
-    padding: 1px 2px;
+    margin: 2px 6px;
 }   
 
 .nav-title {
