--- a/src/components/Watchlist/Watchlist.css
+++ b/src/components/Watchlist/Watchlist.css
@@ -6,12 +6,9 @@
 .watchlist h1 {
     font-size: 40px;
 }
-.watchlist p {
-    font-size: 14px;
-}
 
 .watchlistHeader {
-    margin: 10px 0px;
+    padding: 0 10px;
 }
 
 /* --------------- Sort and Filter --------------- */
@@ -19,13 +16,25 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    padding: 5px 0;
 }
 
 .filterWrapper button {
-    padding: 3px 4px;
+    padding: 4px 5px;
     border: none;
+    border-radius: 4px;
     color: rgb(245, 241, 238);
-    background-color: hsl(0, 47%, 46%);
+    background-color:  rgb(80, 80, 80);
+}
+
+.filterWrapper select {
+    padding: 4px 5px;
+    border: none;
+    border-radius: 4px;
+    background-color: rgb(80, 80, 80);
+    color: rgb(245, 241, 238);
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 /* --------------- Movie list --------------- */
@@ -35,37 +44,45 @@
 }
 
 .watchlistCard {
-    display: flex;
-    flex-direction: column;
+    position: relative;
     margin: 5px 0.5%;
     width: 32.33%;
     max-width: 9rem;
-    height: 24VH;
-    background-color: rgb(135, 135, 184);
+    height: 23VH;
+    border-radius: 4px;
+    overflow: hidden;
+}
+.watchlistCard img {
+    width: 100%;
+    height: 23VH;
+}
+
+.watchlistCardText {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 6VH;
+    background-color: rgba(0, 0, 0, 0.85);
 }
 
 .watchlistCard h3 {
     font-size: 16px;
 }
 
-.watchlistCardText {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-top: auto;
-    padding: 2px 4px 0 4px;
-    /* min-height: 6VH; */
-    height: 6VH;
-    background-color: hsl(0, 0%, 15%);
-}
-
 .watchlistCardTitle {
+    padding: 1px 2px 0px 2px;
     overflow: hidden;
 }
 
 .watchlistCardStars {
     font-size: 12px;
-    color: hsl(41, 100%, 61%);
+    text-align: right;
+    padding: 0px 2px 1px 2px;
+    color: hsl(0, 0%, 55%);
+    background-color: hsla(0, 0%, 0%, 0%);
 }
 
 @media only screen and (max-height: 720px) {
